--- a/style.css
+++ b/style.css
@@ -83,36 +83,35 @@ span {
   margin: auto;
 }
 
+/* ini untuk video */
 .parent {
-  width: 540px;
-  height: 540px;
-  background-color: white;  
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 20px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-  margin: 50px auto;
+  padding: 20px;
 }
 
-
-.video-container{
-  height: 500px;
-  width: 500px;
-  margin: 50px auto;
-  border-radius: 15px;
+.video-container {
+  width: 100%;
+  max-width: 700px;
+  aspect-ratio: 16/9;
   background-color: #f9f9f9;
-  box-shadow: 10px 8px 16px rgba(0, 0, 0, 0.2);
- 
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 .video-container video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
   border-radius: 10px;
 }
 
+
+
+/* end video */
 
 .intro .text-intro{
   padding-block: 2rem;
@@ -441,6 +440,10 @@ span {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
+.video-container {
+  max-width: 90%;
+}
+
 
 nav ul.hidden {
   display: flex;
