--- a/style.css
+++ b/style.css
@@ -466,10 +466,10 @@ nav ul.hidden {
 }
 
 .galeri-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 25px;
-  justify-items: center;
 }
 
 .galeri-item {
@@ -478,8 +478,7 @@ nav ul.hidden {
   overflow: hidden;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease, box-shadow 0.4s ease;
-  max-width: 300px;
-  width: 100%;
+  width: 240px;
 }
 
 .galeri-item:hover {
@@ -489,8 +488,8 @@ nav ul.hidden {
 }
 
 .galeri-item img {
-  width: 100%;
-  height: 200px;
+  width: 240px;
+  height: 160px;
   object-fit: cover;
   border-bottom: 1px solid #ddd;
 }
@@ -500,12 +499,6 @@ nav ul.hidden {
   font-weight: 600;
   color: #444;
   font-size: 16px;
-}
-
-
-.galeri-item:hover {
-  transform: scale(1.05);
-  cursor: pointer;
 }
 
 .visi-misi-container {
