--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ nav ul.hidden {
 
 .galeri-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 kolom di desktop */
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-items: center;
 }
@@ -502,14 +502,12 @@ nav ul.hidden {
   color: #333;
 }
 
-/* Tablet (2 kolom) */
 @media (max-width: 992px) {
   .galeri-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* Mobile (1 kolom) */
 @media (max-width: 600px) {
   .galeri-container {
     grid-template-columns: 1fr;
@@ -521,16 +519,15 @@ nav ul.hidden {
 }
 
 
-/* Media Query untuk Mobile dan Tablet */
 @media (max-width: 992px) {
   .galeri-container {
-    grid-template-columns: repeat(2, 1fr); /* 2 kolom di tablet */
+    grid-template-columns: repeat(2, 1fr); 
   }
 }
 
 @media (max-width: 600px) {
   .galeri-container {
-    grid-template-columns: 1fr; /* 1 kolom di hp */
+    grid-template-columns: 1fr;
   }
 
   .galeri-item img {
