--- a/style.css
+++ b/style.css
@@ -76,7 +76,16 @@ nav ul li a:hover {
 span {
   font-weight: bold;
 }
+.logo-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 
+.logo-uhm {
+    width: auto;
+    height: auto;
+}
 
 .intro{
   width: 60%;
