--- a/style.css
+++ b/style.css
@@ -326,21 +326,16 @@ span {
   font-family: 'Segoe UI', sans-serif;
 }
 
-body {
-  background-image: url('asset/lll.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+form-container {
+  width: 500px;
+  margin: 50px auto;
+  padding: 30px;
+  background-color: #f9f9f9;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  font-family: 'Segoe UI', sans-serif;
+  
 }
-.form-container {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-
 
 .form-container h2 {
   text-align: center;
