--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
 }
 
 body {
-  background-color: skyblue;
+  background-image: url('asset/lll.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100%;
-
-
 }
+
+
 nav {
   display: flex;
   justify-content: space-between;
